--- a/src/galerie.html
+++ b/src/galerie.html
@@ -16,43 +16,45 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>BIOS - eine Zweite Chance </title>
+    <link rel="icon" href="Bilder/logo.png"/>
 </head>
-
 <body>
+
     <header>
 
-        <!--Navbar-->
-        <section id="navbar">
+                <!--Navbar-->
+                <section id="navbar">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
-                    <img src="Bilder/logo.png" id="logo" alt="ziege" />
-                </a>
+                      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <a class="navbar-brand" href="#">
+                                <img src="Bilder/logo.png" id="logo" alt="ziege" />
+                            </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="galerie.html">Galerie</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="formular.html">Kontakt</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="impressum.html">Impressum</a>
-                        </li>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                  <ul class="navbar-nav mr-auto">
+                                      <li class="nav-item">
+                                          <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                                      </li>
+                                      <li class="nav-item active">
+                                          <a class="nav-link" href="galerie.html">Galerie</a>
+                                      </li>
+                                      <li class="nav-item">
+                                          <a class="nav-link" href="formular.html">Kontakt</a>
+                                      </li>
+                                      <li class="nav-item">
+                                          <a class="nav-link" href="Impressum.html">Impressum</a>
+                                      </li>
 
-                    </ul>
-                </div>
-            </nav>
-        </section>
-    </header>
+                                  </ul>
+
+                          </div>
+                  </nav>
+              </section>
+        </header>
     <section>
 
         <div class="container">
@@ -68,11 +70,11 @@
                 <div class="textBlock col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
                     Lieber Besucher,
-                    <br>
-                    <br> Sie möchten einem Tier ein neues Zu Hause geben? dann sind sie hier genau richtig! In unserer Galerie haben Sie die Möglickeit unsere aktuellen Bewohner näher kennen zu lernen und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen, hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular!
-                    <br> Wir freuen uns auf Ihren Besuch!
-                    <br>
-                    <br>
+                    </br>
+                    </br> Sie möchten einem Tier ein neues Zu Hause geben? dann sind sie hier genau richtig! In unserer Galerie haben Sie die Möglickeit unsere aktuellen Bewohner näher kennen zu lernen und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen, hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular!
+                    </br> Wir freuen uns auf Ihren Besuch!
+                    </br>
+                    </br>
                     <h5>Ihr Tierheim-Team </h5>
 
                 </div>
@@ -86,7 +88,7 @@
                     <button class="btn filter-button" data-filter="ziegen">Ziegen</button>
 
                 </div>
-                <br>
+                </br>
 
                  <!-- Platzhalter zwischen ButtonBlock und Galeriebeginn -->
                 <div class="platzhalter col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
@@ -131,7 +133,7 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
                 <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -157,7 +159,7 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
                 <div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -168,7 +170,6 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-
                                 Mischlingsrüde Berti ist am 19.11.15 geboren und wurde am 16.06.18 im Tierheim abgegeben, weil sein Frauchen mit ihm überfordert war und Berti wohl auch mit der Familie. Berti war stark auf sein Frauchen fixiert und kam immer weniger mit den Kindern klar. Man merkt Berti an, dass er recht unsicher ist und Halt bei einer Bezugsperson sucht. Bei fremden Personen braucht er etwas Zeit um Vertrauen zu fassen. Berti neigt dazu Resourcen - besonders Plätze wie seinen Schlafplatz - zu verteidigen. Je vertrauter jedoch ihm eine Person ist, desto eher duldet er es, wenn diese sich einem "verbotenen" Platz nähert.
                             </div>
                             <div class="modal-footer">
@@ -183,7 +184,8 @@
                         <img src="Bilder/ziege1.png" alt="BIOS" title="BIOS - klicken für mehr Infos" />
                     </button>
                 </div>
-                <!-- Modal -->
+
+
                 <div class="modal fade" id="Modal4" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -210,7 +212,8 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
+
                 <div class="modal fade" id="Modal5" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -236,7 +239,7 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
                 <div class="modal fade" id="Modal6" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -262,7 +265,7 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
                 <div class="modal fade" id="Modal7" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -287,7 +290,8 @@
                         <img src="Bilder/ziege3.png" alt="Ritschi" title="Ritschi - klicken für mehr Infos" />
                     </button>
                 </div>
-                <!-- Modal -->
+
+
                 <div class="modal fade" id="Modal8" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -313,7 +317,7 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
+
                 <div class="modal fade" id="Modal9" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -339,7 +343,6 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
                 <div class="modal fade" id="Modal10" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -365,7 +368,6 @@
                     </button>
                 </div>
 
-                <!-- Modal -->
                 <div class="modal fade" id="Modal11" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -393,78 +395,69 @@
     </section>
 
     <footer>
-        <hr />
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <ul>
-                        <li class="bold">
-                            <a>Spenden</a>
-                        </li>
-                        <li>
-                            <a> <u>Spendenkonto:</u></a>
-                        </li>
-                        <li>
-                            <a> Musterbank Musterhausen </a>
-                            <br>
-                            <a> IBAN DE11 2222 3333 4444 5555 66 </a>
-                        </li>
-                        <li>
-                            <a> <u>Spenden über Paypal:</u></a>
-                            <br>
-                            <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul>
-                        <li class="bold">
-                            <a>Anfahrt</a>
-                        </li>
-                        <li>
-                            <a> Tierheim BIOS Musterhausen </a>
-                            <br>
-                            <a> Musterstraße 1 </a>
-                            <br>
-                            <a> 12345 Musterstadt </a>
-                        </li>
-                        <li>
-                            <a href="https://www.google.com/maps/place/Stadtwerke+Musterstadt/@50.9861834,6.8884554,17z/data=!3m1!4b1!4m5!3m4!1s0x47bf30055a956aeb:0x157e75aff56dd5fc!8m2!3d50.98618!4d6.8906441"><u>Link zu Google Maps</u> </a>
-
-                        </li>
-
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul>
-                        <li class="bold">
-                            <a href="#">Infos</a>
-                        </li>
-                        <li>
-                            <a><u>Öffnungszeiten:</u></a>
-                            <br>
-                            <a> Montag bis Freitag: 13:30-17:30 Uhr <br>
-                                  Samstag: 10:00-12:00 Uhr<br>
-                                  Sonntag und an Feiertagen geschlossen!
-                            </a>
-                        </li>
-                        <li>
-                            <a><u>Gassigeh und Kuschelzeiten :</u></a>
-                            <br>
-                            <a> Montag bis Freitag: 11:30-18:30 Uhr
-                                <br> Samstag: 10:00-18:00 Uhr <br> </a>
-                            </li>
-
-                    </ul>
-                </div>
-
-                <div class="row">
-                    <div class="col"> © Tierheim BIOS </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
+       <hr/>
+               <div class="container">
+                   <div class="row">
+                       <div class="col-md-4">
+                           <ul>
+                               <li class="bold">
+                                   <a>Spenden</a>
+                               </li>
+                               <li>
+                                   <a> <u>Spendenkonto:</u></a>
+                               </li>
+                               <li>
+                                   <a> Musterbank Musterhausen </a></br>
+                                   <a> IBAN DE11 2222 3333 4444 5555 66 </a>
+                               </li>
+                               <li>
+                                   <a> <u>Spenden über Paypal:</u></a> </br>
+                                   <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" id="donate"/>
+                               </li>
+                           </ul>
+                       </div>
+                       <div class="col-md-4">
+                         <ul>
+                             <li class="bold">
+                                 <a>Anfahrt</a>
+                             </li>
+                             <li>
+                                 <a> Tierheim BIOS Musterhausen </a> </br>
+                                 <a> Musterstraße 1 </a></br>
+                                 <a> 12345 Musterstadt </a>
+                             </li>
+                             <li>
+                                 <a href="https://www.google.com/maps/place/Stadtwerke+Musterstadt/@50.9861834,6.8884554,17z/data=!3m1!4b1!4m5!3m4!1s0x47bf30055a956aeb:0x157e75aff56dd5fc!8m2!3d50.98618!4d6.8906441"><u>Link zu Google Maps</u> </a>
+                             </li>
+                         </ul>
+                       </div>
+                       <div class="col-md-4">
+                           <ul>
+                               <li class="bold">
+                                   <a>Infos</a>
+                               </li>
+                               <li>
+                                   <a><u>Öffnungszeiten:</u></a> </br>
+                                   <a> Montag bis Freitag: 13:30-17:30 Uhr </br>
+                                       Samstag: 10:00-12:00 Uhr</br>
+                                       Sonntag und an Feiertagen geschlossen!
+                                   </a>
+                               </li>
+                               <li>
+                                   <a><u>Gassigeh und Kuschelzeiten :</u></a> </br>
+                                   <a> Montag bis Freitag: 11:30-18:30 Uhr </br>
+                                       Samstag: 10:00-18:00 Uhr</br>
+                                   </a>
+                               </li>
+                           </ul>
+                       </div>
+                   <div class="row">
+                       <div class="col">
+                         © Tierheim BIOS
+                       </div>
+                 </div>
+               </div>
+             </div>
+     </footer>
 </body>
-
 </html>
